# jsonabc

./: README.md  dev-requirements.txt  setup.cfg  tests.py  tox.ini
.github/workflows/: ci.yaml
jsonabc/: __init__.py  _base.py
tests/: test_unit.py
