[metadata]
name = jsonabc
version = 0.0.1

author = Adham Ehab
author_email = adhaamehab.me@gmail.com

description = Minimal, pythonic JSON to class serializer with zero dependencies and types validation.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

url = https://github.com/adhaamehab/streamed 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True